# innie-engine

./: .env.heartbeat.example  .gitignore  404.html  AGENTS.md  LICENSE  Makefile  README.md  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.gitea/workflows/: docker-publish.yml
.github/workflows/: docs.yml  publish.yml
IMPLEMENTATION_PLAN/: index.html
adrs/: index.html
adrs/0001-journal-first-architecture/: index.html
adrs/0002-sqlite-hybrid-storage/: index.html
adrs/0003-backend-plugin-system/: index.html
adrs/0004-three-phase-heartbeat/: index.html
adrs/0005-hybrid-search-rrf/: index.html
adrs/0006-init-wizard-setup-modes/: index.html
adrs/0007-git-auto-backup/: index.html
adrs/0008-fleet-gateway/: index.html
adrs/0009-skills-as-slash-commands/: index.html
adrs/0010-memory-decay-strategy/: index.html
adrs/0011-secret-scanning/: index.html
adrs/0012-migration/: index.html
adrs/0013-distribution/: index.html
adrs/0014-two-layer-storage/: index.html
adrs/0015-config-format-split/: index.html
adrs/0016-thin-bash-shims/: index.html
adrs/0017-namespace-hook-merge/: index.html
adrs/0018-dockerized-embedding-service/: index.html
adrs/0019-sqlite-tracing/: index.html
adrs/0020-dcg-guard/: index.html
adrs/0021-obsidian-compatibility/: index.html
adrs/0022-engine-scope-boundary/: index.html
adrs/0023-ai-never-writes-files/: index.html
adrs/0024-context-injection-token-budget/: index.html
adrs/0025-uv-primary-distribution/: index.html
adrs/0026-search-pipeline-improvements/: index.html
adrs/0027-cli-surface-area-audit/: index.html
adrs/0028-heartbeat-provider-abstraction/: index.html
adrs/0029-containerized-heartbeat-scheduler/: index.html
adrs/0030-textual-tui-framework/: index.html
adrs/0031-dynamic-agent-registration-a2a/: index.html
adrs/0032-agent-harness-migration-strategy/: index.html
adrs/0033-knowledge-contradiction-detection/: index.html
adrs/0034-heartbeat-schema-expansion-and-a2a-inbox/: index.html
adrs/0035-non-root-container-execution/: index.html
adrs/0035-per-agent-secrets-env/: index.html
adrs/0036-claude-subscription-inference/: index.html
adrs/0037-workspace-volume-separation/: index.html
architecture/backends/: index.html
docs/: IMPLEMENTATION_PLAN.md  getting-started.md  index.md
getting-started/: index.html
scripts/: bump.sh  migrate-openclaw-skills.py
search/: search_index.json
tests/: test_config.py  test_context.py  test_decay.py  test_heartbeat_schema.py  test_paths.py  test_profile.py  test_search.py  test_secrets.py  test_skills.py  test_trace.py
(+311 files in other folders)
